--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/01_diferencaIdade.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/01_diferencaIdade.html
@@ -6,10 +6,10 @@
     */
 
     //ENTRADA
-
-    
+    const anoNascimento = prompt(`Informe seu ano nascimento:`);
+    const nascimentovelho = prompt(`Informe o ano de nascimento do seu irmão mais velho:`);
     //PROCESSAMENTO
-
+alert(`a diferença de idade entre vocês é de ${nascimentovelho - anoNascimento} anos.`);
     
     //SAÍDA
 
