--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/02_somaInteiros.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/02_somaInteiros.html
@@ -6,11 +6,10 @@
     */
 
     //ENTRADA
-
-    
+const num1 = Number(prompt(`Informe um número inteiro:`));
+const num2 = Number(prompt(`Informe mais um número inteiro:`));
     //PROCESSAMENTO
-
-    
+const soma = (num1 + num2);
     //SAÍDA
-
+alert(`A soma dos dois números fica ${soma}`);
 </script>
