--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/03_metrosParaMilimetros.html.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/03_metrosParaMilimetros.html.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
-
+const metros = Number(prompt(`Informe um valor em metros`).replace(",","."));
     
     //PROCESSAMENTO
-
+const conversao = (metros * 1000);
     
     //SAÍDA
-
+alert(`Sua conversão em milimetros fica ${conversao}.`);
 </script>
