--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/06_aumentoSalarial.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/06_aumentoSalarial.html
@@ -6,10 +6,11 @@
     */
 
     //ENTRADA
-
+    const salario = Number(prompt(`Informe o seu salário atual:`).replace(",","."));
+    const porcentagem = Number(prompt(`Informe sua porcentagem de aumento:`).replace(",","."));
     
     //PROCESSAMENTO
-
+    alert(`Seu salário ficará ${salario + salario*porcentagem} reais.`);
     
     //SAÍDA
 
