--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/07_gorjeta.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/07_gorjeta.html
@@ -6,11 +6,7 @@
     */
 
     //ENTRADA
-
-    
-    //PROCESSAMENTO
-
-    
+const precoJantar = Number(prompt(`Informe o preço do jantar:`).replace(",","."));
     //SAÍDA
-
+    alert(`Você deverá pagar para o restaurante ${precoJantar + precoJantar * 10/100} reais`);
 </script>
