--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/08_celsiusFahrenheit.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/08_celsiusFahrenheit.html
@@ -6,11 +6,12 @@
     */
 
     //ENTRADA
-
+    const Celsius = Number(prompt(`Informe sua temperatura em celsius:`));
     
     //PROCESSAMENTO
-
+    const conversao = (Celsius * 9/5 + 34);
     
     //SAÍDA
+    alert(`A conversão para Fahrenheit fica ${conversao}`);
 
 </script>
