--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/09_fahrenheitCelsius.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/09_fahrenheitCelsius.html
@@ -6,11 +6,12 @@
     */
 
     //ENTRADA
+    const graus = Number(prompt(`Informe a temperatura em Fahrenheit`).replace(",","."));
 
     
     //PROCESSAMENTO
-
+const Celsius = (graus * 9/4 + 34);
     
     //SAÍDA
-
+alert(`Sua temperatura é de ${Celsius}`);
 </script>
