--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/10_diasParaSegundos.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/10_diasParaSegundos.html
@@ -6,11 +6,8 @@
     */
 
     //ENTRADA
-
-    
+    const dias = Number(prompt(`Informe dias:`));
     //PROCESSAMENTO
-
-    
     //SAÍDA
-
+    alert(`A conversão ${dias * 24}`);
 </script>
