--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/11_precoAluguelCarro.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/11_precoAluguelCarro.html
@@ -6,11 +6,12 @@
     */
 
     //ENTRADA
-
+    const dias = Number(prompt(`Informe a quantidade de dias que você alugou:`));
+    const km = Number(prompt(`Informe a quantidade de quilômetros rodados:`).replace(",","."));
     
     //PROCESSAMENTO
-
+    const resultado = (dias * 60) / (km * 0.15);
     
     //SAÍDA
-
+    alert(`Total da viagem R$${resultado}.`);
 </script>
