--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/12_diasPerdidosFumar.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/12_diasPerdidosFumar.html
@@ -6,11 +6,11 @@
     */
 
     //ENTRADA
-
-    
+    const dias = Number(prompt(`Informe a quantidade de cigarros fumados por dia: `).replace(",","."));
+    const anos = Number(prompt(`Informe a quantidade de anos que fuma`).replace(",","."));
     //PROCESSAMENTO
-
-    
+    const resultado = (dias * anos / 10)
     //SAÍDA
+    alert(`Você perdeu ${resultado} dias de vida.`);
 
 </script>
