--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/14_duziaOvos.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/14_duziaOvos.html
@@ -6,10 +6,10 @@
     */
 
     //ENTRADA
-
+    const ovos = Number(prompt(`Informe a quantidade de ovos que você comprou:`).trim())
     
     //PROCESSAMENTO
-
+    alert(`Você comprou ${ovos / 12} duzias de ovos`)
     
     //SAÍDA
 
