--- a/02_05_tipos_de_dados/02_05_01_listaExercicios/15_latasTinta.html
+++ b/02_05_tipos_de_dados/02_05_01_listaExercicios/15_latasTinta.html
@@ -4,11 +4,9 @@
     //Peça para o usuário informar quantos metros quadrados deseja pintar. Apresente quantas latas de tinta são necessárias, considerando que um litro de tinta cobrirá 3 metros, e cada lata possui 18 litros de tinta.
 
     //ENTRADA
-
-
+    const metrosQuadrados = Number(prompt(`Informe quantos metros quadrados deseja pintar:`).replace(".",","));
     //PROCESSAMENTO
-
-    
+    const resultado = (metrosQuadrados * 3) / 18;
     //SAÍDA
-
+    alert(`Você irá precisar de ${resultado} latas de tinta.`);
 </script>
